# ReinforceApp

./: README.md  settings.gradle  shell.apk
apkdexproccessor/src/main/java/com/example/: MyClass.java
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/jd/apploader/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  unzip.c  zip.c
app/src/main/cpp/include/: native-lib.h
app/src/main/java/com/jd/apploader/: App.java
app/src/main/res/values/: color.xml  strings.xml  styles.xml
app/src/test/java/com/jd/apploader/: ExampleUnitTest.java
reinforceapk/: build.gradle
reinforceapk/src/main/java/com/max/reinforce/: Main.java
reinforceapk/src/main/java/com/max/reinforce/bean/: ManifestInfo.java  MetaInfo.java  PackageInfo.java  UsesFramework.java  VersionInfo.java
reinforceapk/src/main/java/com/max/reinforce/shell/: ShellPack.java
reinforceapk/src/main/java/com/max/reinforce/util/: Apktool.java  Base64.java  FileUtils.java  InputStreamRunnable.java  Utils.java
